--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header h1 {
     height: 500px;
     display: flex;
     width: 100%;
-    background: red;
+    background: #1846c7db;
     z-index: -1;
     margin: 0;
     padding: 0;
